<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">eTime</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_here">Already Registered? \n Login Here</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="sign_up">Don\'t have an account?\n Register Here.</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">4QjkYKOY6LwvIc4GO8i9zAa2P</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">lf8LcKRvqpTvl215EdZ2Tz26tnw49H4ZJY7Imhd0GtLAmJzZkF </string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="location">Location</string>
    <string name="project">Project</string>
    <string name="display_name">DISPLAY NAME</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="defaultStatus">Welcome to ETIme!!</string>
    <string name="default_notification_channel_id">ET_CH_01</string>
    <string name="ts_notification_channel_id">ET_CH_02</string>
    <string name="acc_notification_icon">timesheet.png</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="decline_project_request">Decline Project Request</string>
    <string name="display_name_profile">Display Name</string>
    <string name="send_project_request">Send Project Request</string>
    <string name="select_employee">SELECT EMPLOYEE</string>
    <string name="create">CREATE</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="comments">COMMENTS</string>
</resources>
