<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tw__composer_light_gray"
    android:padding="16dp"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/edit_text_project_name"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/project"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_project_location"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_text_project_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_project_description"
        app:layout_constraintStart_toStartOf="@+id/edit_text_project_description"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_project_description" />

    <EditText
        android:id="@+id/edit_text_project_description"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_text_project_name"
        android:layout_alignEnd="@+id/edit_text_project_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_project_name"
        app:layout_constraintStart_toStartOf="@+id/edit_text_project_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_project_name" />

    <Button
        android:id="@+id/button_add_project"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/create"
        android:textColor="@color/tw__composer_white"
        app:layout_constraintEnd_toEndOf="@+id/list_view_names"
        app:layout_constraintTop_toBottomOf="@+id/list_view_names" />

    <Spinner
        android:id="@+id/spinner_employes"
        android:layout_width="37dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="@+id/edit_text_project_description"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dialog"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_project_location"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toEndOf="@+id/list_view_names"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_project_location" />

    <ListView
        android:id="@+id/list_view_names"
        android:layout_width="315dp"
        android:layout_height="164dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@color/tw__composer_deep_gray"
        android:scrollIndicators="right"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_select_employee" />

    <TextView
        android:id="@+id/text_view_select_employee"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:gravity="center|start"
        android:text="@string/select_employee"
        app:layout_constraintStart_toStartOf="@+id/edit_text_project_location"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_project_location" />

</android.support.constraint.ConstraintLayout>